2003-05-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:           bumped version to 8.4.3
	* generic/tcl.h:
	* macosx/Tcl.pbproj/project.pbxproj:
	* tools/tcl.wse.in:
	* unix/configure:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure:
	* win/configure.in:

	* doc/socket.n: nroff font handling correction.

	* library/encoding/gb2312-raw.enc (new): This is the original
	gb2312.enc renamed to allow for it to still be used.  This is
	needed by Tk (unix) because X fonts with gb2312* charsets really
	do want the original gb2312 encoding. [Bug 557030]

2003-05-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdAH.c (Tcl_FormatObjCmd): Values which can't be
	anything but wide shouldn't be demoted to long.  [consequence of
	HEAD fixes for Bug 699060]

2003-05-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/encoding/gb2312.enc: copy euc-cn.enc over original
	gb2312.enc.  gb2312.enc appeared to not work as expected, and most
	uses of gb2312 really mean euc-cn (which may be the cause of the
	problem). [Bug 557030]

	* generic/tclEnv.c (TclUnsetEnv): Another putenv() copy behavior
	problem repaired when compiling on windows and using microsoft's
	runtime. [Bug 736421] (gravereaux)

2003-05-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOUtil.c: add decl for FsThrExitProc to suppress
	warnings.

2003-05-13  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclEvent.c (Tcl_Finalize): Removed unused variable to
	reduce compiler warnings.  [Bug 664745]

2003-05-13  Joe Mistachkin  <joe@mistachkin.com>

	* generic/tcl.decls:  Changed Tcl_JoinThread parameter name from 
	* generic/tclDecls.h: "id" to "threadId". [Bug 732477]
	* unix/tclUnixThrd.c:
	* win/tclWinThrd.c: 
	* mac/tclMacThrd.c:

2003-05-13  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tcl.decls:
	* macosx/tclMacOSXBundle.c: added extended version of the 
	Tcl_MacOSXOpenBundleResources() API taking an extra version number